# MyHandler

./: GOOGLE_AUTH_2.0.md  MyHandler.drawio  PRIVACY.md  README.md  TAURI_API_DOCUMENTATION.md  TERMS.md  google_auth.md  index.html  package-lock.json  package.json  tailwind.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  main.rs
src-tauri/src/commands/: calendar_commands.rs  mod.rs  setting_commands.rs  task_commands.rs
src-tauri/src/db/: mod.rs
src-tauri/src/db/sql/: clear_all_calendar_events.sql  clear_calendar_credentials.sql  delete_calendar_event_by_task.sql  delete_task_by_id.sql  disable_calendar_integration.sql  enable_calendar_integration.sql  get_calendar_credentials.sql  get_calendar_event_by_task.sql  get_settings.sql  get_task_by_id.sql  get_tasks_by_date.sql  get_tasks_by_date_not_completed.sql  save_calendar_credentials.sql  update_status_completed.sql  update_status_not_started.sql  update_status_ongoing.sql  update_status_paused.sql  upsert_calendar_event.sql
src-tauri/src/db/tables/: calendar_credentials.sql  calendar_events.sql  settings.sql  tasks.sql
src-tauri/src/db_macros/: Cargo.toml
src-tauri/src/db_macros/src/: lib.rs
src-tauri/src/helpers/: mod.rs  parse_date.rs
src-tauri/src/oauth_pages/: error.html  security_error.html  success.html
src-tauri/src/services/: calendar_service.rs  mod.rs  settings_service.rs  task_service.rs
src-tauri/src/structs/: calendar_event.rs  dto.rs  mod.rs  settings.rs  task_struct.rs  task_update.rs
src-tauri/src/structs/calendar/: mod.rs  (+1 more)
(+32 files in other folders)
