[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["YarKhan"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
db_macros = { path = "../src-tauri/src/db_macros" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
dotenv = "0.15"
rusqlite = { version = "0.38", features = ["bundled", "chrono", "uuid"] }
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
uuid = { version = "1.12", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
tiny_http = "0.12"
webbrowser = "1.0"
urlencoding = "2.1"
rand = "0.8"

# Optimize for faster dev builds
[profile.dev]
incremental = true
opt-level = 1  # Some optimization for faster runtime

[profile.dev.package."*"]
opt-level = 2  # Optimize dependencies more (they don't change often)
